--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<!DOCTYPE html><html><head><title>https://jmmv.dev/index.html</title><link rel="canonical"
-href="https://jmmv.dev/index.html"/><meta name="robots" content="noindex"><meta
-charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://jmmv.dev/index.html" /></head></html>
+<!DOCTYPE html><html><head><title>https://jmmv.dev/"</title><link rel="canonical"
+href="https://jmmv.dev/"/><meta name="robots" content="noindex"><meta
+charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://jmmv.dev/" /></head></html>
